изменил структуру последовательности папки майн для прохождения тестов GIT